kubernetes/istio/2-hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-2
  template:
    metadata:
      labels:
        app: hello-2
    spec:
      containers:
      - name: hello
        image: afzc/hello-app:1.0.0
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: hello-2-svc
spec:
  selector:
    app: hello-2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
