kubernetes/istio/3-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - hello/hello-gateway
  http:
  - match:
    - uri:
        prefix: /h1
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-1-svc
        port:
          number: 80
  - match:
    - uri:
        prefix: /h2
    rewrite:
      uri: /
    route:
    - destination:
        host: hello-2-svc
        port:
          number: 80
